# sdk

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflow/: sdk.yml
.github/workflows/: sdk.yml
prsdk/nsga2/: demo.py  evolution.py
prsdk/nsga2/candidate/: candidate.py  torch_candidate.py
prsdk/nsga2/crossover/: crossover.py  uniform_crossover.py
prsdk/nsga2/evaluation/: evaluator.py  torch_evaluator.py
prsdk/nsga2/mutation/: mutation.py  uniform_mutation.py
prsdk/nsga2/selection/: parent_selector.py  tournament_selector.py
prsdk/nsga2/sorting/: nsga2_sorter.py  sorter.py
prsdk/nsga2/sorting/distance_calculation/: crowding_distance.py  distance_calculator.py
prsdk/persistence/persistors/: hf_persistor.py  persistor.py
prsdk/persistence/serializers/: neural_network_serializer.py  serializer.py  sklearn_serializer.py
prsdk/predictors/neural_network/: neural_net_predictor.py  torch_neural_net.py
prsdk/predictors/sklearn_predictors/: linear_regression_predictor.py  random_forest_predictor.py  sklearn_predictor.py
prsdk/prescriptors/: prescriptor.py
src/prsdk/: dummy.py
src/prsdk/data/: cao_mapping.py  torch_data.py
src/prsdk/persistence/persistors/: hf_persistor.py  persistor.py
src/prsdk/persistence/serializers/: neural_network_serializer.py  sklearn_serializer.py
src/prsdk/predictors/: predictor.py
src/prsdk/prescriptors/: prescriptor.py
tests/: test_dummy.py
tests/persistence/: test_hf_persistence.py  test_predictor_serialization.py
tests/predictors/: test_neural_net.py
(+4 files in other folders)
